# DecoPlan

./: .gitignore  =3.0.0  BUILD.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  OVERVIEW.md  QUICKSTART_RAG_LORA.md  RAG_LORA_README.md  README.md  app.py  build.sh  requirements.txt  setup_rag_lora.sh  start_backend.sh  test_rag_init.py  test_setup.py
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: TEST_RESULTS.md
backend/api/: app.py
backend/lora/: prepare_training_data.py  train_lora_optimized.py  training_configs_optimized.py
backend/rag/: build_furniture_db.py  rag_inference.py
backend/tests/: test_flask_api.py  test_rag_init.py  test_setup.py
datasets/Input/: Furniture Data Report (1).xlsx - Furniture Data.csv
datasets/Output/: sample_lora_training_data.json  training_examples_with_outputs.json
docs/backend/: IMPLEMENTATION_SUMMARY.md  QUICKSTART_RAG_LORA.md
frontend/src/: App.tsx
frontend/src/components/: DesignCard.tsx  FilterPanel.tsx  Footer.tsx  Navigation.tsx  ResultsDisplay.tsx
frontend/src/services/: api.ts
frontend/src/types/: furniture.ts
lora/: evaluate.py  inference.py  prepare_training_data.py  test_lora_model.py  train_lora.py  training_configs_optimized.py
rag/: build_furniture_db.py  furniture_retriever.py  rag_inference.py
scripts/setup/: setup_rag_lora.sh
src/: llm_wrapper.cpp  multimodal_processor.cpp
